# fractal-studio

./: CMakeLists.txt  CMakePresets.json  README.md  generate_vs_solution.bat
src/: ColorMap.h  CudaFractal.cu  CudaFractal.h  FractalMath.h  FractalRenderer.cpp  FractalRenderer.h  FractalWidget.cpp  FractalWidget.h  MainWindow.cpp  MainWindow.h  RenderWorker.cpp  RenderWorker.h  Types.h  main.cpp
